hw-26 raw solution

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <section id="form-section">
 
     </section>
+
+    <section id="table-section">
+
+    </section>
     <script src="src/main.js" type="module"></script>
 </body>
 </html>
